--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "webpack-merge": "^0.8.4"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "^0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
-    "core-js": "^2.2.0",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "^3.0.0-rc.1",
+    "bootstrap": "^3.3.6",
+    "core-js": "^2.4.0",
     "ie-shim": "^0.1.0",
+    "ng2-file-upload": "^1.0.3",
+    "ng2-toastr": "^0.3.1",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "~0.6.12"
   }
