--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "webpack-merge": "^0.8.4"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "^3.0.0-rc.1",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "^3.0.0-rc.2",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.0",
     "ie-shim": "^0.1.0",
     "ng2-file-upload": "^1.0.3",
     "ng2-toastr": "^0.3.1",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "~0.6.12"
+    "rxjs": "5.0.0-beta.11",
+    "zone.js": "~0.6.17"
   }
 }
