add scss and fix styles  for active route etc.. add a little demo of using same component for different params (next monster)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^1.1.1",
     "css-loader": "^0.23.1",
+    "node-sass": "^3.9.3",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^4.0.2",
     "to-string-loader": "^1.1.4",
     "typescript": "~1.8.9",
     "typings": "~1.0.3",
