--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Angular2 Webpack Starter Project",
   "scripts": {
     "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 8080 --content-base src",
-    "build": "webpack",
-    "postinstall": "typings install"
+    "build": "webpack"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.32",
@@ -24,24 +23,24 @@
     "webpack-merge": "^0.8.4"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
     "@angular2-material/button": "^2.0.0-alpha.8-1",
     "@angular2-material/card": "^2.0.0-alpha.8-1",
     "@angular2-material/core": "^2.0.0-alpha.8-1",
     "@angular2-material/input": "^2.0.0-alpha.8-1",
-    "@angular/router": "^3.0.0-rc.2",
+    "@angular/router": "3.0.0",
     "bootstrap": "^3.3.6",
-    "core-js": "^2.4.0",
+    "core-js": "^2.4.1",
     "ie-shim": "^0.1.0",
     "ng2-file-upload": "^1.0.3",
     "ng2-toastr": "^0.3.1",
-    "rxjs": "5.0.0-beta.11",
-    "zone.js": "~0.6.17"
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "~0.6.21"
   }
 }
