move seed app to day4 upgrade deps and build to same as seed

--- a/package.json
+++ b/package.json
@@ -3,24 +3,39 @@
   "version": "1.0.0",
   "description": "Angular2 Webpack Starter Project",
   "scripts": {
-    "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 8080 --content-base src",
-    "build": "webpack"
+    "start": "webpack-dev-server --inline  --progress --port 8080 --content-base src",
+    "build": "webpack",
+    "test": "karma start",
+    "tdd": "karma start --no-single-run --auto-watch"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.32",
-    "@types/hammerjs": "^2.0.32",
+    "@types/jasmine": "^2.2.33",
     "@types/node": "^6.0.38",
+    "@types/socket.io-client": "^1.4.26",
+    "@types/source-map": "^0.1.26",
+    "@types/uglify-js": "^2.0.27",
+    "@types/webpack": "^1.12.33",
     "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^2.2.4",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
-    "node-sass": "^3.9.3",
+    "file-loader": "^0.9.0",
+    "jasmine-core": "^2.5.0",
+    "node-sass": "^3.8.0",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^4.0.2",
+    "resolve-url-loader": "^1.6.0",
+    "sass-loader": "^4.0.0",
+    "simulant": "^0.2.2",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
-    "typescript": "~2.0.2",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0",
-    "webpack-merge": "^0.8.4"
+    "ts-helpers": "^1.1.1",
+    "typescript": "^2.0.2",
+    "url-loader": "^0.5.7",
+    "webpack": "2.1.0-beta.22",
+    "webpack-dev-server": "2.1.0-beta.4",
+    "webpack-merge": "0.14.1"
   },
   "dependencies": {
     "@angular/common": "2.0.0",
@@ -30,17 +45,22 @@
     "@angular/http": "2.0.0",
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular2-material/button": "^2.0.0-alpha.8-1",
-    "@angular2-material/card": "^2.0.0-alpha.8-1",
-    "@angular2-material/core": "^2.0.0-alpha.8-1",
-    "@angular2-material/input": "^2.0.0-alpha.8-1",
-    "@angular/router": "3.0.0",
+    "@angular/router": "^3.0.0",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "ie-shim": "^0.1.0",
     "ng2-file-upload": "^1.0.3",
-    "ng2-toastr": "^0.3.1",
+    "ng2-toastr": "^0.4.2",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "~0.6.21"
+    "socket.io": "^1.4.8",
+    "socket.io-client": "^1.4.8",
+    "zone.js": "~0.6.21",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^2.0.0 ",
+    "karma-coverage": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "1.8.0"
   }
 }
