--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/core-js": "^0.9.32",
+    "@types/hammerjs": "^2.0.32",
     "@types/jasmine": "^2.2.33",
     "@types/node": "^6.0.38",
     "@types/socket.io-client": "^1.4.26",
@@ -22,7 +23,7 @@
     "css-loader": "^0.23.1",
     "file-loader": "^0.9.0",
     "jasmine-core": "^2.5.0",
-    "node-sass": "^3.8.0",
+    "node-sass": "^3.9.3",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.0",
@@ -45,6 +46,10 @@
     "@angular/http": "2.0.0",
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular2-material/button": "^2.0.0-alpha.8-2",
+    "@angular2-material/card": "^2.0.0-alpha.8-2",
+    "@angular2-material/core": "^2.0.0-alpha.8-2",
+    "@angular2-material/input": "^2.0.0-alpha.8-2",
     "@angular/router": "^3.0.0",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
