--- a/package.json
+++ b/package.json
@@ -39,22 +39,22 @@
     "webpack-merge": "0.14.1"
   },
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/common": "~2.0.0",
+    "@angular/compiler": "~2.0.0",
+    "@angular/core": "~2.0.0",
+    "@angular/forms": "~2.0.0",
+    "@angular/http": "~2.0.0",
+    "@angular/platform-browser": "~2.0.0",
+    "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular2-material/button": "^2.0.0-alpha.8-2",
     "@angular2-material/card": "^2.0.0-alpha.8-2",
     "@angular2-material/core": "^2.0.0-alpha.8-2",
     "@angular2-material/input": "^2.0.0-alpha.8-2",
-    "@angular/router": "^3.0.0",
+    "@angular/router": "~3.0.0",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "ie-shim": "^0.1.0",
-    "ng2-file-upload": "^1.0.3",
+    "ng2-file-upload": "~1.1.0",
     "ng2-toastr": "^0.4.2",
     "rxjs": "5.0.0-beta.12",
     "socket.io": "^1.4.8",
