--- a/package.json
+++ b/package.json
@@ -10,64 +10,65 @@
   },
   "devDependencies": {
     "@types/core-js": "^0.9.32",
-    "@types/hammerjs": "^2.0.32",
-    "@types/jasmine": "^2.2.33",
+    "@types/hammerjs": "^2.0.34",
+    "@types/jasmine": "^2.5.47",
     "@types/socket.io-client": "^1.4.26",
     "@types/source-map": "^0.5.0",
     "@types/uglify-js": "^2.0.27",
-    "@types/webpack": "^2.0.0",
-    "angular2-router-loader": "^0.3.4",
-    "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^3.0.8",
+    "@types/webpack": "^2.2.13",
+    "angular2-router-loader": "^0.3.5",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.1.2",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.0",
-    "file-loader": "^0.9.0",
+    "css-loader": "^0.28.0",
+    "file-loader": "^0.10.1",
     "jasmine-core": "^2.5.0",
-    "node-sass": "^3.9.3",
+    "node-sass": "^4.5.2",
     "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^1.6.0",
-    "sass-loader": "^4.0.0",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.3",
     "simulant": "^0.2.2",
-    "source-map-loader": "^0.1.5",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.4",
-    "ts-helpers": "^1.1.1",
-    "typescript": "2.2",
-    "url-loader": "^0.5.7",
-    "webpack": "2.1.0-beta.25",
-    "webpack-dev-server": "2.1.0-beta.10",
-    "webpack-merge": "^0.18.0"
+    "source-map-loader": "^0.2.0",
+    "style-loader": "^0.16.1",
+    "to-string-loader": "^1.1.5",
+    "tslib": "^1.6.0",
+    "typescript": "2.2.2",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "2.4.2",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "@angular/common": "~2.2.2",
-    "@angular/compiler": "~2.2.2",
-    "@angular/core": "~2.2.2",
-    "@angular/forms": "~2.2.2",
-    "@angular/http": "~2.2.2",
-    "@angular/material": "^2.0.0-alpha.10",
-    "@angular/platform-browser": "~2.2.2",
-    "@angular/platform-browser-dynamic": "~2.2.2",
-    "@angular/router": "~3.2.2",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/animations": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/material": "^2.0.0-beta.2",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/router": "~4.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ie-shim": "^0.1.0",
-    "karma": "^1.3.0",
+    "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0 ",
     "karma-coverage": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.8.0",
-    "ng2-file-upload": "~1.1.0",
-    "ng2-toastr": "^1.3.1",
+    "karma-webpack": "^2.0.3",
+    "ng2-file-upload": "^1.2.0",
+    "ng2-toastr": "^4.0.1",
     "random-words": "0.0.1",
-    "rxjs": "5.0.0-beta.12",
-    "socket.io": "^1.4.8",
-    "socket.io-client": "^1.4.8",
+    "rxjs": "^5.2.0",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "web-animations-js": "^2.2.2",
-    "zone.js": "~0.6.26"
+    "zone.js": "~0.8.5"
   }
 }
