--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@angular/forms": "^4.0.1",
     "@angular/animations": "^4.0.1",
     "@angular/http": "^4.0.1",
+    "@angular/language-service": "^4.0.1",
     "@angular/material": "^2.0.0-beta.2",
     "@angular/platform-browser": "^4.0.1",
     "@angular/platform-browser-dynamic": "^4.0.1",
