--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "tdd": "karma start --no-single-run --auto-watch"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.32",
+    "@types/core-js": "^0.9.42",
     "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "^2.5.47",
     "@types/socket.io-client": "^1.4.26",
@@ -39,19 +39,20 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/animations": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/language-service": "^4.0.1",
-    "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/router": "~4.0.0",
+    "@angular/animations": "^4.3.0",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/common": "^4.3.0",
+    "@angular/compiler": "^4.3.0",
+    "@angular/core": "^4.3.0",
+    "@angular/forms": "^4.3.0",
+    "@angular/http": "^4.3.0",
+    "@angular/language-service": "^4.3.0",
+    "@angular/material": "^2.0.0-beta.8",
+    "@angular/platform-browser": "^4.3.0",
+    "@angular/platform-browser-dynamic": "^4.3.0",
+    "@angular/router": "~4.3.0",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^2.2.1",
+    "@ngrx/store": "^2.2.3",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
